--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,23 +1,9 @@
 @import './base.css';
 
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  font-weight: normal;
-
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   font-weight: normal;
 }
 
@@ -38,9 +24,12 @@ a,
 @media (min-width: 1024px) {
   body {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+    place-items: center;
+  }
+
+  #app {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 2rem;
   }
 }
